Descrição dos Projetos

--- a/index.html
+++ b/index.html
@@ -28,15 +28,15 @@
                 <div class="projects-grid">
                     <div class="project">
                         <h3>Gerenciador de Entregas</h3>
-                        <p>Projeto completo de gerenciamento de entregas, com cadastro de cliente, criação, cancelamento e conclusção de pedidos, além de um mapa para visualização e possibilidade de integração com API's de rastreio.</p>
+                        <p>Projeto completo de gerenciamento de entregas, com cadastro de cliente, criação, cancelamento e conclusão de pedidos, além de um mapa para visualização e possibilidade de integração com API's de rastreio.</p>
                     </div>
                     <div class="project">
-                        <h3>Projeto 2</h3>
-                        <p>Descrição breve do projeto.</p>
+                        <h3>Gerador de Contratos</h3>
+                        <p>Gerador automatizado de contratos, que usa informações extraidas diretamente da receita federal para preencher o contrato e me retorno ele como um PDF pronto.</p>
                     </div>
                     <div class="project">
-                        <h3>Projeto 3</h3>
-                        <p>Descrição breve do projeto.</p>
+                        <h3>Leitor XML</h3>
+                        <p>Automação  que busca notas fiscais em um email especifico, faz o payload e o XML é lido para que sejam extraidas informações relevantes e uteis.</p>
                     </div>
                 </div>
             </div>
