--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     </div>
                     <div class="project">
                         <h3>Gerador de Contratos</h3>
-                        <p>Gerador automatizado de contratos, que usa informações extraidas diretamente da receita federal para preencher o contrato e me retorno ele como um PDF pronto.</p>
+                        <p>Gerador automatizado de contratos, que usa informações extraidas diretamente da receita federal para preencher o contrato e me retorna ele como um PDF pronto.</p>
                     </div>
                     <div class="project">
                         <h3>Payload Automatico e Leitor XML</h3>
