--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <h1>Luiz Santana</h1>
             <p>Granduando Ciência da Computação | Criador de Soluções Digitais</p>
-            <h5>Granduando Ciência da Computação | Criador de Soluções Digitais</h5>
+            <h5>SITE AINDA EM DESENVOLVIMENTO!</h5>
         </div>
     </header>
 
