retirando orçamento duas paginas

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Luiz Santana</title>
+    <title>Luiz Santana - Portifolio</title>
     <link rel="stylesheet" href="./styles/style.css">
     
 </head>
@@ -14,7 +14,7 @@
         <nav class="cabecalho__menu">
            <a class="cabecalho__menu__link" href="index.html">Home</a>
            <a class="cabecalho__menu__link" href="about.html">Sobre Mim</a> 
-           <a class="cabecalho__menu__link" href="index.html">Orçamento</a> 
+           <!-- <a class="cabecalho__menu__link" href="index.html">Orçamento</a>  -->
         </nav>
     </header>
 
